CCT-1891-Merge to master
Change-Id: Iae62b735cf825a1439474192d04d01cbbf05394f

--- a/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
@@ -255,6 +255,9 @@ subscriptions_descriptor:
         - name: public.progression.pet-form-updated
           schema_uri: http://justice.gov.uk/core/courts/public-pet-form-updated.json
 
+        - name: public.progression.pet-form-released
+          schema_uri: http://justice.gov.uk/core/courts/public-pet-form-released.json
+
         - name: public.progression.pet-detail-updated
           schema_uri: http://justice.gov.uk/core/courts/public-pet-detail-updated.json
 
