cct-1903, cct-2058, cct-2073 - list directly from ATCM stack
Change-Id: I683957f2d50ff055e1b42f3e7f0a697e6d1da8fb

--- a/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
@@ -454,6 +454,9 @@ subscriptions_descriptor:
         - name: progression.event.cases-referred-to-court
           schema_uri: http://justice.gov.uk/core/courts/cases-referred-to-court.json
 
+        - name: progression.event.cases-referred-to-court-v2
+          schema_uri: http://justice.gov.uk/core/courts/cases-referred-to-court-V2.json
+
         - name: progression.events.new-case-document-received
           schema_uri: http://justice.gov.uk/core/courts/new-case-document-received.json
 
