fixed IT fleky test which was passed in previous build
Change-Id: I34a557374fa2f6c3bbfa9390827696624329f523

--- a/progression-command/progression-command-api/src/raml/json/schema/progression.release-pet-form.json
+++ b/progression-command/progression-command-api/src/raml/json/schema/progression.release-pet-form.json
@@ -3,6 +3,10 @@
   "id": "http://moj.gov.uk/cpp/progression/command/release-pet-form.json",
   "type": "object",
   "properties": {
+    "petId": {
+      "description": "Pet Id",
+      "$ref": "http://justice.gov.uk/domain/core/common/definitions.json#/definitions/uuid"
+    },
     "caseId": {
       "description": "Case Id",
       "$ref": "http://justice.gov.uk/domain/core/common/definitions.json#/definitions/uuid"
