CCT-1333, CCT-1078, DD-24777 - CTSC Work Management & Workflow Automation and Task Allocation
Change-Id: I6e39a87ab2764b7b4355b513139e2fa6de96fb3e

--- a/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
@@ -300,6 +300,9 @@ subscriptions_descriptor:
         - name: public.progression.cotr-operation-failed
           schema_uri: http://justice.gov.uk/core/courts/cotr-operation-failed.json
 
+        - name: public.progression.document-added
+          schema_uri: http://moj.gov.uk/cpp/progression/events/public.progression.document-added.json
+
         - name: public.progression.breach-applications-to-be-added-to-hearing
           schema_uri: http://justice.gov.uk/progression/courts/public.progression.breach-applications-to-be-added-to-hearing.json
 
