--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <unifiedsearch.version>8.0.7</unifiedsearch.version>
         <systemdocgenerator.version>8.0.82</systemdocgenerator.version>
         <applicationscourtorders.version>8.0.9</applicationscourtorders.version>
-        <sjp.version>8.0.70</sjp.version>
+        <sjp.version>8.0.79</sjp.version>
         <jackson-data-format.version>2.8.8</jackson-data-format.version>
         <httpmime.version>4.5.1</httpmime.version>
         <stagingpubhub.version>8.0.1</stagingpubhub.version>
@@ -98,6 +98,13 @@
                     <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
+            <!-- added  plugin to fix  SRE-19114 -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.11.0.3922</version>
+            </plugin>
+
         </plugins>
     </build>
     <distributionManagement>
