Fix for SNI-3279,SNI-5066,SNI-4114,SNI-2627,SNI-5121,SNI-3278,SNI-4036,SNI-3895,DD-26783,SNI-5211,SNI-4807 and DD-29606
Change-Id: I06fac1b4baa890ec85fe7926fec315c0bfb0ac52

--- a/progression-event/progression-event-listener/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-listener/src/yaml/subscriptions-descriptor.yaml
@@ -338,6 +338,8 @@ subscriptions_descriptor:
 
         - name: progression.event.opa-result-list-notice-deactivated
           schema_uri: http://justice.gov.uk/progression/event/progression.event.opa-result-list-notice-deactivated.json
+        - name: progression.event.hearing-resulted-bdf
+          schema_uri: http://moj.gov.uk/cpp/progression/court/progression.event.hearing-resulted-bdf.json
 
           # ***** Deprecated API - Start ********
           # ***** Do not add any new API in this section *****
