--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>uk.gov.moj.cpp.progression</groupId>
     <artifactId>progression-parent</artifactId>
-    <version>8.0.191-SNAPSHOT</version>
+    <version>8.0.195-CPAW-DLQ-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Progression services application</name>
@@ -67,20 +67,20 @@
         <material.version>8.0.12</material.version>
         <json-transformer.version>1.0.6</json-transformer.version>
         <access.control.version>6.4.1</access.control.version>
-        <referencedata.version>8.0.66</referencedata.version>
-        <listing.version>8.0.67</listing.version>
-        <hearing.version>8.0.124</hearing.version>
+        <referencedata.version>8.0.67</referencedata.version>
+        <listing.version>8.0.92</listing.version>
+        <hearing.version>8.0.133</hearing.version>
         <usersgroups.version>8.0.37</usersgroups.version>
-        <defence.version>8.0.48</defence.version>
-        <referencedata.offence.version>8.0.14</referencedata.offence.version>
-        <coredomain.version>8.0.2</coredomain.version>
+        <defence.version>8.0.54</defence.version>
+        <referencedata.offence.version>8.0.23</referencedata.offence.version>
+        <coredomain.version>8.0.3</coredomain.version>
         <directionsmanagement.version>8.0.23</directionsmanagement.version>
         <elasticsearch-maven-plugin.version>6.13</elasticsearch-maven-plugin.version>
         <elasticsearch.embedded.version>7.16.2</elasticsearch.embedded.version>
         <results.version>8.0.32</results.version>
         <notification.notify.version>7.0.18</notification.notify.version>
-        <unifiedsearch.version>8.0.7</unifiedsearch.version>
-        <systemdocgenerator.version>8.0.86</systemdocgenerator.version>
+        <unifiedsearch.version>8.0.10</unifiedsearch.version>
+        <systemdocgenerator.version>8.0.91</systemdocgenerator.version>
         <applicationscourtorders.version>8.0.9</applicationscourtorders.version>
         <sjp.version>8.0.79</sjp.version>
         <jackson-data-format.version>2.8.8</jackson-data-format.version>
