--- a/progression-domain/progression-datatypes-common/pom.xml
+++ b/progression-domain/progression-datatypes-common/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>progression-domain</artifactId>
         <groupId>uk.gov.moj.cpp.progression</groupId>
-        <version>8.0.191-SNAPSHOT</version>
+        <version>8.0.195-CPAW-DLQ-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
