--- a/progression-event/progression-event-listener/pom.xml
+++ b/progression-event/progression-event-listener/pom.xml
@@ -88,7 +88,7 @@
                                 <artifactItem>
                                     <artifactId>mireportdata-progression-event-listener</artifactId>
                                     <groupId>uk.gov.moj.cpp.mi.reportdata</groupId>
-                                    <version>RELEASE</version>
+                                    <version>8.0.54</version>
                                     <classifier>listener-tests</classifier>
                                     <type>jar</type>
                                     <outputDirectory>${project.build.directory}/test-classes
