SNI-3608 DD-30776 DD-31094 DD-32484 SNI-2865 SNI-6128 SNI-6443 merges from 3rd line release to master
Change-Id: Id7b850667cba34c32ed2b5a1da5dbd2e8a6016cc

--- a/progression-event/progression-event-listener/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-listener/src/yaml/subscriptions-descriptor.yaml
@@ -362,6 +362,9 @@ subscriptions_descriptor:
         - name: progression.event.application-hearing-defendant-updated
           schema_uri: http://justice.gov.uk/progression/event/progression.event.application-hearing-defendant-updated.json
 
+        - name: progression.event.hearing-add-missing-results-bdf
+          schema_uri: http://moj.gov.uk/cpp/progression/court/progression.event.hearing-add-missing-results-bdf.json
+
           # ***** Deprecated API - Start ********
           # ***** Do not add any new API in this section *****
 
