--- a/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
@@ -345,4 +345,7 @@ subscriptions_descriptor:
         - name: public.progression.related-reference-deleted
           schema_uri: http://cpp.moj.gov.uk/progression/json/schemas/event/public.progression.related-reference-deleted.json
 
+        - name: public.progression.related-hearing-updated-for-adhoc-hearing
+          schema_uri: http://justice.gov.uk/progression/courts/public.progression.related-hearing-updated-for-adhoc-hearing.json
+
       event_source_name: public.event.source
