--- a/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
@@ -325,8 +325,18 @@ subscriptions_descriptor:
         - name: progression.event.related-hearing-requested
           schema_uri: http://justice.gov.uk/progression/courts/progression.event.related-hearing-requested.json
 
+        - name: progression.event.related-hearing-requested-for-adhoc-hearing
+          schema_uri: http://justice.gov.uk/progression/courts/progression.event.related-hearing-requested-for-adhoc-hearing.json
+
+        - name: progression.event.related-case-requested-for-adhoc-hearing
+          schema_uri: http://justice.gov.uk/progression/courts/progression.event.related-case-requested-for-adhoc-hearing.json
+
+
         - name: progression.event.related-hearing-updated
           schema_uri: http://justice.gov.uk/progression/courts/progression.event.related-hearing-updated.json
+
+        - name: progression.event.related-hearing-updated-for-adhoc-hearing
+          schema_uri: http://justice.gov.uk/progression/courts/progression.event.related-hearing-updated-for-adhoc-hearing.json
 
         - name: progression.event.delete-next-hearings-requested
           schema_uri: http://justice.gov.uk/progression/courts/progression.event.delete-next-hearings-requested.json
