--- a/pom.xml
+++ b/pom.xml
@@ -63,13 +63,14 @@
         <javafaker.version>1.0.2</javafaker.version>
         <material.version>17.0.20</material.version>
         <json-transformer.version>1.0.6</json-transformer.version>
+        <access.control.version>6.4.1</access.control.version>
         <referencedata.version>17.0.22</referencedata.version>
         <listing.version>17.0.6</listing.version>
         <hearing.version>8.0.150</hearing.version>
         <usersgroups.version>17.0.19</usersgroups.version>
         <defence.version>17.0.16</defence.version>
         <referencedata.offence.version>17.0.17</referencedata.offence.version>
-        <coredomain.version>17.21.11</coredomain.version>
+        <coredomain.version>17.21.12</coredomain.version>
         <directionsmanagement.version>8.0.30</directionsmanagement.version>
         <elasticsearch-maven-plugin.version>6.13</elasticsearch-maven-plugin.version>
         <results.version>17.0.1</results.version>
