--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.gov.moj.cpp.common</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>17.21.11</version>
+        <version>17.21.22</version>
     </parent>
 
     <groupId>uk.gov.moj.cpp.progression</groupId>
@@ -96,6 +96,7 @@
         <powermock-reflect>2.0.2</powermock-reflect>
         <byte-buddy.version>1.12.22</byte-buddy.version>
         <podam>7.1.0.RELEASE</podam>
+        <jgitflow.maven.developBranchName>main</jgitflow.maven.developBranchName>
     </properties>
     <build>
         <plugins>
