--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -21,7 +21,11 @@ resources:
       type: github
       name: hmcts/cpp-azure-devops-templates
       endpoint: 'hmcts'
-      ref: 'locale-issue'
+      ref: 'main'
+
+variables:
+  LANG : 'en_GB.UTF-8'
+  LC_ALL : 'en_GB.UTF-8'
 
 pool:
   name: "MDV-ADO-AGENT-AKS-01"
