--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -28,12 +28,13 @@ pool:
   demands:
     - identifier -equals centos8-j17
 
+
 variables:
-  sonarqubeProject: "uk.gov.moj.cpp.listing:listing-parent"
-  service_Name: 'progression'
-  itTest_Folder: 'progression-integration-test'
-  LANG : 'en_GB.UTF-8'
-  LC_ALL : 'en_GB.UTF-8'
+
+  sonarqubeProject: "uk.gov.moj.cpp.progression:progression-parent" # update eg: uk.gov.moj.cpp.listing:listing-parent
+  service_Name: 'progression' # this should be service name. Image repository will be <serviceName>-service and should be in sysnc with aks-deploy repo.. eg : stagingbulkscan, hearing, systemidmapper
+  itTest_Folder: 'progression-integration-test' # integration test folder name system-id-mapper-integration-test
+
 
 stages:
   - ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
