--- a/progression-command/pom.xml
+++ b/progression-command/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.gov.moj.cpp.progression</groupId>
         <artifactId>progression-parent</artifactId>
-        <version>17.0.22-SNAPSHOT</version>
+        <version>17.0.21</version>
     </parent>
     <artifactId>progression-command</artifactId>
     <packaging>pom</packaging>
