--- a/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
@@ -371,8 +371,14 @@ subscriptions_descriptor:
         - name: progression.event.all-hearing-offences-updated
           schema_uri: http://justice.gov.uk/core/courts/progression.event.all-hearing-offences-updated.json
 
+        - name: progression.event.all-hearing-offences-updated-v2
+          schema_uri: http://justice.gov.uk/core/courts/progression.event.all-hearing-offences-updated-v2.json
+
         - name: progression.event.hearing-offences-updated
           schema_uri: http://justice.gov.uk/core/courts/progression.event.hearing-offences-updated.json
+
+        - name: progression.event.hearing-offences-updated-v2
+          schema_uri: http://justice.gov.uk/core/courts/progression.event.hearing-offences-updated-v2.json
 
         - name: progression.event.new-defendant-added-to-hearing
           schema_uri: http://justice.gov.uk/core/courts/progression.event.new-defendant-added-to-hearing.json
