Add Application Note to Application At a Glance (AAAG) which replicates CAAG case note (#158)
* DD-34723 Add Application Note to Application At a Glance (AAAG) which replicates CAAG case note

* DD-34723 Add Application Note to Application At a Glance (AAAG) which replicates CAAG case note

--- a/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/public-publications-descriptor.yaml
@@ -116,6 +116,12 @@ subscriptions_descriptor:
         - name: public.progression.case-note-edited
           schema_uri: http://cpp.moj.gov.uk/progression/json/schemas/event/public.progression.case-note-edited.json
 
+        - name: public.progression.application-note-added
+          schema_uri: http://cpp.moj.gov.uk/progression/json/schemas/event/public.progression.application-note-added.json
+
+        - name: public.progression.application-note-edited
+          schema_uri: http://cpp.moj.gov.uk/progression/json/schemas/event/public.progression.application-note-edited.json
+
         - name: public.progression.defendant-matched
           schema_uri: http://cpp.moj.gov.uk/progression/json/schemas/event/public.progression.defendant-matched.json
 
