--- a/progression-viewstore/progression-viewstore-liquibase/pom.xml
+++ b/progression-viewstore/progression-viewstore-liquibase/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.gov.moj.cpp.progression</groupId>
         <artifactId>progression-viewstore</artifactId>
-        <version>17.0.37-SNAPSHOT</version>
+        <version>17.0.36</version>
     </parent>
 
     <artifactId>progression-viewstore-liquibase</artifactId>
