--- a/progression-domain/progression-domain-transformations/progression-domain-transformation-judicialresult-mandatory-attributes/pom.xml
+++ b/progression-domain/progression-domain-transformations/progression-domain-transformation-judicialresult-mandatory-attributes/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.gov.moj.cpp.progression</groupId>
         <artifactId>progression-domain-transformations</artifactId>
-        <version>17.0.38</version>
+        <version>17.0.39-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
