--- a/progression-domain/progression-domain-message/src/raml/json/schema/progression.query.get-application-at-a-glance.json
+++ b/progression-domain/progression-domain-message/src/raml/json/schema/progression.query.get-application-at-a-glance.json
@@ -44,6 +44,9 @@
             "name": {
               "type": "string"
             },
+            "isProbationBreach": {
+              "type": "boolean"
+            },
             "address": {
               "$ref": "http://justice.gov.uk/core/courts/address.json#"
             },
@@ -84,6 +87,9 @@
         },
         "name": {
           "type": "string"
+        },
+        "isProbationBreach": {
+          "type": "boolean"
         },
         "address": {
           "$ref": "http://justice.gov.uk/core/courts/address.json#"
