--- a/progression-query/progression-query-api/src/raml/json/schema/progression.query.application.aaag.json
+++ b/progression-query/progression-query-api/src/raml/json/schema/progression.query.application.aaag.json
@@ -81,6 +81,9 @@
         "name": {
           "type": "string"
         },
+        "isProbationBreach": {
+          "type": "boolean"
+        },
         "address": {
           "$ref": "http://justice.gov.uk/core/courts/address.json#"
         },
@@ -278,6 +281,9 @@
         },
         "name": {
           "type": "string"
+        },
+        "isProbationBreach": {
+          "type": "boolean"
         },
         "address": {
           "$ref": "http://justice.gov.uk/core/courts/address.json#"
