--- a/progression-query/progression-query-view/pom.xml
+++ b/progression-query/progression-query-view/pom.xml
@@ -70,6 +70,18 @@
                             </exclusion>
                         </exclusions>
                     </dependency>
+                    <dependency>
+                        <groupId>uk.gov.moj.cpp.defence</groupId>
+                        <artifactId>defence-query-api</artifactId>
+                        <version>${defence.version}</version>
+                        <classifier>raml</classifier>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>*</groupId>
+                                <artifactId>*</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
