DD 35606 merge from main branch. (#328)
* created a team/direction-management  branch from main

* DD-35606 Direction mgmt query move into progression space  (#169)

* Initial commit

* initial commit -2

* updated IT tests and refactored the code

* Added Unit tests and cleanup the code

* updated script file

* DD-35606 Fixed codereview comments

* DD-35606 fixed review comments-2

* DD-35606 fixed review comments -3

* DD-35606 fixed review comments and fixed the failure build

* DD-35606 updated imports

* Dev/direction mgmt (#188)

* Initial commit

* initial commit -2

* updated IT tests and refactored the code

* Added Unit tests and cleanup the code

* updated script file

* DD-35606 Fixed codereview comments

* DD-35606 fixed review comments-2

* DD-35606 fixed review comments -3

* DD-35606 fixed review comments and fixed the failure build

* DD-35606 updated imports

* DD-35606 Fixed the IT test

* DD-35606 Fixed IT tests and cleap up the code

* New 17.0.23-DIRECTION-MANAGEMENT-SNAPSHOT

* Dev/direction mgmt (#211)

* Initial commit

* initial commit -2

* updated IT tests and refactored the code

* Added Unit tests and cleanup the code

* updated script file

* DD-35606 Fixed codereview comments

* DD-35606 fixed review comments-2

* DD-35606 fixed review comments -3

* DD-35606 fixed review comments and fixed the failure build

* DD-35606 updated imports

* DD-35606 Fixed the IT test

* DD-35606 Fixed IT tests and cleap up the code

* DD-35606-updated refdata version for direction mgmt endpoint changes

* New 17.0.24-DIRECTION-MANAGEMENT-SNAPSHOT

* Dev/direction mgmt (#217)

* Initial commit

* initial commit -2

* updated IT tests and refactored the code

* Added Unit tests and cleanup the code

* updated script file

* DD-35606 Fixed codereview comments

* DD-35606 fixed review comments-2

* DD-35606 fixed review comments -3

* DD-35606 fixed review c

--- a/progression-query/progression-query-api/pom.xml
+++ b/progression-query/progression-query-api/pom.xml
@@ -180,6 +180,12 @@
             <artifactId>access-control-progression-providers</artifactId>
             <version>${cpp.platform-libraries.version}</version>
         </dependency>
+        <dependency>
+            <groupId>uk.gov.moj.cpp.progression</groupId>
+            <artifactId>progression-refdata-service</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- JUnit regression testing framework. -->
         <dependency>
@@ -244,5 +250,6 @@
             <version>2.10.10</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 </project>
