--- a/progression-eventprocessorstore/progression-eventprocessorstore-persistence/pom.xml
+++ b/progression-eventprocessorstore/progression-eventprocessorstore-persistence/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>uk.gov.moj.cpp.progression</groupId>
-        <artifactId>progression-parent</artifactId>
+        <artifactId>progression-eventprocessorstore</artifactId>
         <version>17.0.39-CCT-2047-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
