DD-36447 SNI-452: BDF to patch and republish LAA concluded event (#366)
Change-Id: Iaa71d91830bfea675d1612ab534f2b4d6126bc92

--- a/progression-command/progression-command-api/pom.xml
+++ b/progression-command/progression-command-api/pom.xml
@@ -155,6 +155,9 @@
                                 <include>
                                     progression.add-further-info-defence-cotr.json
                                 </include>
+                                <include>
+                                    progression.command.patch-and-resend-laa-outcome-concluded.json
+                                </include>
                             </includes>
                             <generatorProperties implementation="uk.gov.justice.generation.pojo.core.PojoGeneratorProperties">
                                 <plugins>
