remove persistence unit and implement jdbs repo for notificationInfo

--- a/progression-eventprocessorstore/progression-eventprocessorstore-persistence/pom.xml
+++ b/progression-eventprocessorstore/progression-eventprocessorstore-persistence/pom.xml
@@ -21,10 +21,6 @@
         </dependency>
 
         <dependency>
-            <groupId>uk.gov.justice.services</groupId>
-            <artifactId>persistence-deltaspike</artifactId>
-        </dependency>
-        <dependency>
             <groupId>uk.gov.justice.utils</groupId>
             <artifactId>utilities-core</artifactId>
         </dependency>
@@ -46,9 +42,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.deltaspike.modules</groupId>
-            <artifactId>deltaspike-test-control-module-api</artifactId>
-            <scope>test</scope>
+            <groupId>uk.gov.justice.services</groupId>
+            <artifactId>persistence-jdbc</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
