DD-34161, SNI-6856, SNI-5185 Fixes from 3rd line release branch team/release-3rd-line-2504

--- a/progression-event/progression-event-listener/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-listener/src/yaml/subscriptions-descriptor.yaml
@@ -8,6 +8,9 @@ subscriptions_descriptor:
         - name: progression.event.prosecution-case-created
           schema_uri: http://justice.gov.uk/core/courts/prosecution-case-created.json
 
+        - name: progression.event.hearing-offences-updated-v2
+          schema_uri: http://justice.gov.uk/core/courts/progression.event.hearing-offences-updated-v2.json
+
         - name: progression.event.court-document-removed
           schema_uri: http://justice.gov.uk/core/courts/courts-document-removed.json
 
