POM result version update

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <coredomain.version>17.101.3</coredomain.version>
         <directionsmanagement.version>8.0.30</directionsmanagement.version>
         <elasticsearch-maven-plugin.version>6.13</elasticsearch-maven-plugin.version>
-        <results.version>17.0.57-CCT-2266</results.version>
+        <results.version>17.0.1</results.version>
         <notification.notify.version>17.0.1</notification.notify.version>
         <unifiedsearch.version>17.0.12</unifiedsearch.version>
         <systemdocgenerator.version>17.0.27</systemdocgenerator.version>
