SNI-6547 SNI-7156 DD-37776 SNI-7115

--- a/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
@@ -187,6 +187,9 @@ subscriptions_descriptor:
         - name: progression.event.court-register-notified
           schema_uri: http://justice.gov.uk/progression/courts/court-register-notified.json
 
+        - name: progression.event.court-register-notified-v2
+          schema_uri: http://justice.gov.uk/progression/courts/court-register-notified-v2.json
+
         - name: progression.event.hearing-resulted
           schema_uri: http://justice.gov.uk/progression/courts/progression.event.hearing-resulted.json
 
