--- a/progression-domain/progression-domain-message/src/raml/json/schema/progression.event.court-application-status-updated.json
+++ b/progression-domain/progression-domain-message/src/raml/json/schema/progression.event.court-application-status-updated.json
@@ -3,16 +3,12 @@
   "id": "http://justice.gov.uk/core/courts/progression.event.court-application-status-updated.json",
   "type": "object",
   "properties": {
-    "id": {
-      "$ref": "http://justice.gov.uk/domain/core/common/definitions.json#/definitions/uuid"
-    },
-    "applicationStatus": {
-      "$ref": "http://justice.gov.uk/core/courts/courtsDefinitions.json#/definitions/courtApplicationStatus"
+    "courtApplication": {
+      "$ref": "http://justice.gov.uk/core/courts/courtApplication.json#"
     }
   },
   "required": [
-    "id",
-    "applicationStatus"
+    "courtApplication"
   ],
   "additionalProperties": false
 }
