CIMD-73: Child-applications (#885)
* updated pom.xml files

* DD-37192:fix for failing API tests

* DD-37025: caag API- updated linked applications to exclude child applications

* DD-37025:updated artifact Ids

* New 17.0.43-child-applications-SNAPSHOT

* DATAIN-756: add linkedApplications to court proceedings query

* New 17.0.44-child-applications-SNAPSHOT

* DD-37026:updated AAG API to include parent application summary

* DD-37026: updated schema for aag API

* updated reference data to latest version

* New 17.0.45-child-applications-SNAPSHOT

* updated event store pom with branch artifact

* DD-38516: fix 403 error (#748)

* DD-38516: fix 403 error

* DD-38516: suppress sonar

---------

Co-authored-by: Erol Kureli <>

* fix for IT tests

* fix for IT tests

* New 17.0.46-child-applications-SNAPSHOT

* DD-38516: redundant condiotion removed from drl (#770)

Co-authored-by: Erol Kureli <>

* New 17.0.47-child-applications-SNAPSHOT

* CIMD-582: updated dependecies

* New 17.0.48-child-applications-SNAPSHOT

* Merge child-application team branch to main

---------

Co-authored-by: devops-team <devops-team@hmcts.net>
Co-authored-by: Erol Kureli <>
Co-authored-by: erolkurelihmcts <134499553+erolkurelihmcts@users.noreply.github.com>

--- a/progression-query/progression-query-api/src/raml/json/progression.query.court-proceedings-for-application.json
+++ b/progression-query/progression-query-api/src/raml/json/progression.query.court-proceedings-for-application.json
@@ -34,5 +34,23 @@
     "courtCentre": {
       "id": "88cdf36e-93e4-41b0-8277-17d9dba7f06f"
     }
-  }
+  },
+  "linkedApplications": [
+    {
+      "applicationId": "982ef017-5b49-43a6-b04c-50751eb141b6",
+      "applicationTitle": "Failing to comply",
+      "applicationReference": "TFL1195954-2",
+      "applicationStatus": "DRAFT",
+      "applicantDisplayName": "Amazon",
+      "respondentDisplayNames": "Adriel Shawna Armstrong,John S Chivers,Rowe"
+    },
+    {
+      "applicationId": "57457780-569f-42c1-beec-563ef26c3be0",
+      "applicationTitle": "Appearance to make",
+      "applicationReference": "TFL1195954-3",
+      "applicationStatus": "DRAFT",
+      "applicantDisplayName": "Bob K Kalis",
+      "respondentDisplayNames": "Adriel Shawna Armstrong,James J Smith,Rowe"
+    }
+  ]
 }
