--- a/progression-query/progression-query-api/src/raml/json/schema/progression.query.application.aaag.json
+++ b/progression-query/progression-query-api/src/raml/json/schema/progression.query.application.aaag.json
@@ -119,6 +119,10 @@
         "$ref": "#/definitions/applicationSummary"
       }
     },
+    "parentApplication": {
+      "type": "object",
+      "$ref": "#/definitions/applicationSummary"
+    },
     "linkedCases": {
       "type": "array",
       "minItems": 1,
