--- a/progression-query/progression-query-view/src/raml/json/schema/progression.query.court-proceedings-for-application.json
+++ b/progression-query/progression-query-view/src/raml/json/schema/progression.query.court-proceedings-for-application.json
@@ -19,6 +19,13 @@
     "summonsApprovalRequired": {
       "description": "Indicates that the summons approval process is required to be initiated",
       "type": "boolean"
+    },
+    "linkedApplications": {
+      "type": "array",
+      "minItems": 1,
+      "items": {
+        "$ref": "#/definitions/applicationSummary"
+      }
     }
   },
   "required": [
