--- a/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
+++ b/progression-event/progression-event-processor/src/yaml/subscriptions-descriptor.yaml
@@ -530,6 +530,8 @@ subscriptions_descriptor:
         - name: progression.event.remove-defendant-custodial-establishment-requested
           schema_uri: http://justice.gov.uk/core/courts/remove-defendant-custodial-establishment-requested.json
 
+        - name: progression.event.delete-previous-hearings-and-create-next-hearing
+          schema_uri: http://justice.gov.uk/core/courts/progression.event.delete-previous-hearings-and-create-next-hearing.json
 
           # ***** Deprecated API - Start ********
           # ***** Do not add any new API in this section *****
@@ -836,5 +838,8 @@ subscriptions_descriptor:
         # Hearingnows
         - name: public.hearingnows.now-notification-generated
           schema_uri: http://moj.gov.uk/cpp/hearing/nows/events/public.hearingnows.now-notification-generated.json
+
+        - name: public.listing.create-next-hearing-requested
+          schema_uri: http://justice.gov.uk/listing/events/public.listing.create-next-hearing-requested.json
 
       event_source_name: public.event.source
